# kafka_client

./: .gitignore  CMakeLists.txt  README.MD  aa.c  bind_ifname.c  client.c  consumer.c  data.txt  http.c  main.c  main.c.bak  producer.c  run.c  soc.c  soc.h
docker_kafka/: READMD.MD  docker-compose.yml
hack/: README.MD  alarm_send.service  install.sh  kafka.service  kafka_config.service  kafka_start.sh  kafka_stop.sh  start_kafka.sh  stop_kafka.sh  uninstall.sh
http/: http.c  test_http.c
kafak/: consumer.c  consumer.h
src/: client.c  soc.c
thirdpart/: build.sh
